--- a/Rock-Paper-Scissors-UI/index.html
+++ b/Rock-Paper-Scissors-UI/index.html
@@ -11,7 +11,7 @@
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-rows: 1fr 3fr 1fr; 
+    grid-template-rows: 20vh 60vh 20vh; 
     align-items: center;
     justify-items: center;
   
